Title it for career day

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Pusher Test</title>
+    <title>Career Day 2018</title>
     <link rel="stylesheet" href="styles.css"></link>
     <script src="https://js.pusher.com/4.3/pusher.min.js"></script>
   </head>
